# aiki-genano

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROVENANCE.md  README.md  THIRD_PARTY_LICENSES.md  modal_app.py  pyproject.toml
aiki_genano/: __init__.py
aiki_genano/analysis/: blast_novelty.py  blast_summary_table.py  generation_2.ipynb  plot_dataset_figures.py  run_blast_check.py
aiki_genano/cli/: __init__.py  __main__.py  generate.py  predict.py  smoke.py  train.py
aiki_genano/evaluation/: analyze_4models.py  inference.py  inference_gdpo.py  profile.py  run_boltz.py  run_netsolp.py  run_netsolp_esm_compare.py  run_properties.py  run_properties_netsolp.py  run_sapiens_tempro.py  run_tempro.py
aiki_genano/rewards/: nanobody_scaffold.py  nbv1_properties.py  rewards.py
aiki_genano/training/: data_utils.py  dpo.py  dpo_dataset.py  gdpo.py  hf_arguments.py  inference.py  sft.py  utils.py
benchmarks/: .gitignore  BENCHMARK_COMPARISON.md  BENCHMARK_COMPARISON_raw.csv  CONFOUNDERS.md  PER_TARGET_TABLE.md  README.md  REPRODUCTION_TABLE.md  fold_targets.py  targets.fasta
benchmarks/generators/: test_esmfold.py  test_iglm.py  test_nanoabllama.py  test_nanobert.py  test_pepmlm.py  test_proteindpo.py  test_protgpt2.py
benchmarks/patches/: proteindpo_sample.patch
benchmarks/run/: add_netsolp.py  common.py  compare_tools.py  fasta_to_profile_csv.py  finalize_after_netsolp.sh  orchestrate_protgpt2_and_finalize.sh  prefold_esmfold.py  profile_tool.py  run_all.sh  run_iggm.py  (+8 more)
configs/: dpo_developability.yaml  sft_10k.yaml  sft_continue_20k.yaml
docker/: Dockerfile  README.md
scripts/: build_and_push.sh  docker_smoke_test.sh  download_checkpoints.sh  prelaunch_smoke.sh  zenodo_manifest.json
web/: index.html
(+16 files in other folders)
